@@ -15,6 +15,11 @@ Changes in stable release 2.4.19 (not released yet)
 
 * Fixed a relief drawing problem in FvwmWinList.
 
+* Fixed traveling windows on restart if a window used non NorthWest
+  gravity and changed that before the restart.
+
+* Fixed installation of FvwmGtk.1 for debian (with DESTDIR set).
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.18 (19-Mar-2004)
