@@ -1,3 +1,8 @@
+2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmGtk/Makefile.am (man_onedir):
+	fixed FvwmGtk.1 rule when DESTDIR is set
+
 2004-06-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmWinList/ButtonArray.c (DoButton):
