@@ -1,3 +1,9 @@
+2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (RestoreWithdrawnLocation):
+	fixed traveling windows if application changed gravity hint before
+	recapture
+
 2004-06-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/functions.c (CheckActionType):
